update evaluation codes for TTorrent and XWiki